[tool.poetry]
name = "kyber-api"
version = "0.1.0"
description = ""
authors = ["Cristian Triana <crisdevelop4@gmail.com>"]
readme = "README.md"
packages = [{include = "kyber_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pycryptodome = "^3.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
